--- a/gallery.html
+++ b/gallery.html
@@ -24,10 +24,10 @@
   <section class="content">
     <h2>Our Facilities</h2>
     <div class="gallery">
-      <img src="images/storage1.jpg" alt="Storage Room 1">
-      <img src="images/storage2.jpg" alt="Storage Room 2">
-      <img src="images/facility1.jpg" alt="Facility 1">
-      <img src="images/facility2.jpg" alt="Facility 2">
+      <img src="images/image1.jpg" alt="Storage Room 1">
+      <img src="images/image2.jpeg" alt="Storage Room 2">
+      <img src="images/image3.jpeg" alt="Facility 1">
+      <img src="images/image4.jpeg" alt="Facility 2">
     </div>
   </section>
 
