--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Contact — Saptagiri Cold Storage</title>
+<title>About — Saptagiri Cold Storage</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -29,23 +29,18 @@
 <main>
 
 <section class="section container">
-  <h3>Contact Us</h3>
-  <div class="contact-grid" style="margin-top:12px">
-    <form onsubmit="event.preventDefault(); alert('Thank you! We received your inquiry.'); this.reset();">
-      <label>Name</label><input required name="name" placeholder="Your name">
-      <label>Email</label><input required name="email" type="email" placeholder="you@company.com">
-      <label>Phone</label><input name="phone" placeholder="Mobile number">
-      <label>Message</label><textarea name="message" rows="5" placeholder="Tell us about your requirement"></textarea>
-      <div style="margin-top:10px;display:flex;gap:10px;align-items:center"><button type="submit" class="cta">Send Inquiry</button><div style="color:#6b7b8c">Or email: <a href="mailto:svasuvelu@gmail.com">svasuvelu@gmail.com</a></div></div>
-    </form>
-    <div class="card" style="padding:18px;border-radius:12px">
-      <h4 style="margin:0 0 6px">Saptagiri Cold Storage</h4>
-      <div>46, Subramaniya Udayar Street<br>Telengupalayam, Coimbatore - 641039</div>
-      <div style="margin-top:8px;font-weight:700">Mobile: +91 86100 75858</div>
-      <div>Email: <a href="mailto:svasuvelu@gmail.com">svasuvelu@gmail.com</a></div>
-      <div style="margin-top:12px">
-        <iframe width="100%" height="220" frameborder="0" style="border:0;border-radius:8px" src="https://maps.google.com/maps?q=R.S.%20Puram%2C%20Coimbatore&t=&z=15&ie=UTF8&iwloc=&output=embed"></iframe>
-      </div>
+  <h3>About Us</h3>
+  <div class="about-grid" style="margin-top:12px">
+    <div><img src="images/hero.jpg" alt="about"></div>
+    <div>
+      <h2>Who we are</h2>
+      <p style="color:#6b7b8c;line-height:1.7">Saptagiri Cold Storage is a family-owned cold storage facility located near R.S. Puram, Coimbatore. We serve local businesses and larger distributors with reliable, hygienic, and technology-driven cold chain solutions.</p>
+      <h4 style="margin-top:12px">Our Values</h4>
+      <ul style="line-height:1.8;color:#23475f">
+        <li>Quality — Clean handling and strict SOPs</li>
+        <li>Reliability — 24×7 monitoring and backup</li>
+        <li>Transparency — Real-time reporting for clients</li>
+      </ul>
     </div>
   </div>
 </section>
