--- a/contact.html
+++ b/contact.html
@@ -29,15 +29,48 @@
 <main>
 
 <section class="section container">
-  <h3>Contact Us</h3>
+  <h3>Contact Us -></h3>
   <div class="contact-grid" style="margin-top:12px">
-    <form onsubmit="event.preventDefault(); alert('Thank you! We received your inquiry.'); this.reset();">
-      <label>Name</label><input required name="name" placeholder="Your name">
-      <label>Email</label><input required name="email" type="email" placeholder="you@company.com">
-      <label>Phone</label><input name="phone" placeholder="Mobile number">
-      <label>Message</label><textarea name="message" rows="5" placeholder="Tell us about your requirement"></textarea>
-      <div style="margin-top:10px;display:flex;gap:10px;align-items:center"><button type="submit" class="cta">Send Inquiry</button><div style="color:#6b7b8c">Or email: <a href="mailto:svasuvelu@gmail.com">svasuvelu@gmail.com</a></div></div>
-    </form>
+<form action="https://formsubmit.co/svasuvelu@gmail.com" method="POST" id="contactForm">
+
+  <!-- Disable CAPTCHA -->
+  <input type="hidden" name="_captcha" value="false">
+
+  <!-- Custom email subject -->
+  <input type="hidden" name="_subject" value="New Inquiry from Saptagiri Cold Storage Website">
+
+  <!-- Redirect after submit -->
+  <input type="hidden" name="_next" value="https://senthilvasuvelu.github.io/success.html">
+
+  <!-- Basic spam protection -->
+  <input type="text" name="_honey" style="display:none">
+
+  <label>Name</label>
+  <input required name="name" placeholder="Your name">
+
+  <label>Email</label>
+  <input required name="email" type="email" placeholder="you@company.com">
+
+  <label>Phone</label>
+  <input name="phone" pattern="[0-9+ ]*" placeholder="Mobile number">
+
+  <label>Message</label>
+  <textarea name="message" rows="5" required placeholder="Tell us about your requirement"></textarea>
+
+  <div style="margin-top:10px;display:flex;gap:10px;align-items:center;flex-wrap:wrap">
+
+    <button type="submit" class="cta">Send Inquiry</button>
+
+    <!-- WhatsApp Button -->
+    <a href="https://wa.me/919894310982?text=Hello%2C%20I%20would%20like%20to%20know%20about%20your%20cold%20storage%20services."
+       class="cta"
+       style="background:#25D366;color:white;">
+       WhatsApp Message
+    </a>
+
+  </div>
+</form>
+
     <div class="card" style="padding:18px;border-radius:12px">
       <h4 style="margin:0 0 6px">Saptagiri Cold Storage</h4>
       <div>46, Subramaniya Udayar Street<br>Telengupalayam, Coimbatore - 641039</div>
