--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
   <input type="hidden" name="_subject" value="New Inquiry from Saptagiri Cold Storage Website">
 
   <!-- Redirect after submit -->
-  <input type="hidden" name="_next" value="https://senthilvasuvelu.github.io/success.html">
+  <input type="hidden" name="_next" value="https://senthilvasuvelu.github.io/SaptagiriColdStorage/success.html">
 
   <!-- Basic spam protection -->
   <input type="text" name="_honey" style="display:none">
