--- a/gallery.html
+++ b/gallery.html
@@ -53,11 +53,11 @@
   <h3>Gallery</h3>
   <p style="color:#6b7b8c">Photos from the facility, racks, loading bay and equipment.</p>
   <div class="gallery-grid" style="margin-top:12px">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g1">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g2">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g3">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g4">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g5">
+    <img src="images/image1.jpg" data-large="images/hero.jpg" alt="g1">
+    <img src="images/image2.jpg" data-large="images/hero.jpg" alt="g2">
+    <img src="images/image4.jpg" data-large="images/hero.jpg" alt="g3">
+    <img src="images/rackmodel.jpg" data-large="images/hero.jpg" alt="g4">
+    <img src="images/visitingcard.jpg" data-large="images/hero.jpg" alt="g5">
     <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g6">
   </div>
 </section>
