--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
     <a href="contact.html">Contact</a>
     <a class="cta" href="contact.html">Get a Quote</a>
   </nav>
+  <div class="social-links">
+    <a href="https://instagram.com/SaptagiriColdStorage" target="_blank">
+      <img src="images/instagramC.svg" alt="Instagram">
+    </a>
+
+    <a href="https://facebook.com/YOUR_" target="_blank">
+      <img src="images/facebookC.svg" alt="Facebook">
+    </a>
+        <a href="https://facebook.com/YOUR_ID" target="_blank">
+      <img src="images/whatsappC.svg" alt="Facebook">
+    </a>
+  </div>
 </header>
 <script>
   const btn = document.getElementById("menu-toggle");
