--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 <section class="section container">
   <h3>Gallery Preview</h3>
   <div class="gallery-grid" style="margin-top:12px">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g1">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g2">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g3">
-    <img src="images/hero.jpg" data-large="images/hero.jpg" alt="g4">
+    <img src="images/image1.jpg" data-large="images/image1.jpg" alt="g1">
+    <img src="images/Warehouse.jpg" data-large="images/Warehouse.jpg" alt="g2">
+    <img src="images/image5.jpg" data-large="images/image5.jpg" alt="g6">
+    <img src="images/rackmodel.jpg" data-large="images/rackmodel.jpg" alt="g4">
   </div>
 </section>
 
