--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <li>• 24×7 power backup, CCTV and safety protocols</li>
       </ul>
     </div>
-    <div><img src="images/hero.jpg" alt="facility" style="border-radius:12px"></div>
+    <div><img src="images/Warehouse.jpg" alt="facility" style="border-radius:12px"></div>
   </div>
 </section>
 
