disable snowman js

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<script src="js/snow.js"></script>
+<!-- <script src="js/snow.js"></script> -->
 <header id="site-header">
   <div class="brand">
     <div class="logo"><div class="mark"><svg xmlns="http://www.w3.org/2000/svg" width="44" height="44" viewBox="0 0 24 24"><defs></defs><g fill="none" fill-rule="evenodd"><rect rx="6" width="24" height="24" fill="#2FBDFF"/><path d="M6.5 12c0-3 5-5 5-5s5 2 5 5c0 1.657-1.343 3-3 3h-4c-1.657 0-3-1.343-3-3z" fill="#fff"/></g></svg></div></div>
