--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<script src="js/snow.js"></script>
+<!-- <script src="js/snow.js"></script> -->
 <header id="site-header">
   <div class="brand">
     <div class="logo">
