--- a/services.html
+++ b/services.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<script src="js/snow.js"></script>
+<!-- <script src="js/snow.js"></script> -->
+
 <header id="site-header">
   <div class="brand" style="display:flex;align-items:center;width:100%;justify-content:space-between;">
     <div class="logo" style="display:flex;align-items:center;gap:10px;">
