--- a/gallery.html
+++ b/gallery.html
@@ -54,10 +54,10 @@
   <h3>Gallery</h3>
   <p style="color:#6b7b8c">Photos from the facility, racks, loading bay and equipment.</p>
   <div class="gallery-grid" style="margin-top:12px">
-    <img src="images/image1.jpg" data-large="images/image1.jpg" alt="g1">
-    <img src="images/Warehouse.jpg" data-large="images/Warehouse.jpg" alt="g2">
-    <img src="images/image5.jpg" data-large="images/image5.jpg" alt="g6">
-    <img src="images/rackmodel.jpg" data-large="images/rackmodel.jpg" alt="g4">
+    <img src="images/scs1.jpg" data-large="images/scs1.jpg" alt="g1">
+    <img src="images/scs2.jpg" data-large="images/scs2.jpg" alt="g2">
+    <img src="images/scs3.jpg" data-large="images/scs3.jpg" alt="g6">
+    <img src="images/scs4.jpg" data-large="images/scs4.jpg" alt="g4">
     <img src="images/coldroom.webp" data-large="images/coldroom.webp" alt="g5">
     <img src="images/image4.jpg" data-large="images/image4.jpg" alt="g3">
     
