--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <a href="services.html">Services</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
-    <a class="cta" href="contact.html">Get a Quote</a>
+    <!-- <a class="cta" href="contact.html">Get a Quote</a> -->
   </nav>
   <div class="social-links">
     <a href="https://instagram.com/SaptagiriColdStorage" target="_blank">
@@ -89,9 +89,9 @@
         </p>
   
         <div style="display:flex;gap:12px;flex-wrap:wrap">
-          <a class="cta" href="contact.html">Request a Quote</a>
+          <!-- <a class="cta" href="contact.html">Request a Quote</a> 
           <a style="background:#fff;padding:9px 14px;border-radius:22px;font-weight:700;color:var(--navy)"
-             href="services.html">Our Services</a>
+             href="services.html">Our Services</a> -->
         </div>
       </div>
   
@@ -175,7 +175,7 @@
         <li>• 24×7 power backup, CCTV and safety protocols</li>
       </ul>
     </div>
-    <div><img src="images/Warehouse.jpg" alt="facility" style="border-radius:12px"></div>
+    <div><img src="images/scs2.jpg" alt="facility" style="border-radius:12px"></div>
   </div>
 </section>
 
@@ -229,10 +229,10 @@
 <section class="section container">
   <h3>Gallery Preview</h3>
   <div class="gallery-grid" style="margin-top:12px">
-    <img src="images/image1.jpg" data-large="images/image1.jpg" alt="g1">
-    <img src="images/Warehouse.jpg" data-large="images/Warehouse.jpg" alt="g2">
-    <img src="images/image5.jpg" data-large="images/image5.jpg" alt="g6">
-    <img src="images/rackmodel.jpg" data-large="images/rackmodel.jpg" alt="g4">
+    <img src="images/scs1.jpg" data-large="images/scs1.jpg" alt="g1">
+    <img src="images/scs2.jpg" data-large="images/scs2.jpg" alt="g2">
+    <img src="images/scs3.jpg" data-large="images/scs3.jpg" alt="g6">
+    <img src="images/scs4.jpg" data-large="images/scs4.jpg" alt="g4">
   </div>
 </section>
 
