--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 
     <div class="card" style="padding:18px;border-radius:12px">
       <h4 style="margin:0 0 6px">Saptagiri Cold Storage</h4>
-      <div>46, Subramaniya Udayar Street<br>Telengupalayam, Coimbatore - 641039</div>
+      <div> 46 1-2, Subramaniya Udayar Street<br>Telengupalayam, Coimbatore - 641039</div>
       <div style="margin-top:8px;font-weight:700">Mobile: +91 86100 75858</div>
       <div>Email: <a href="mailto:svasuvelu@gmail.com">svasuvelu@gmail.com</a></div>
       <div style="margin-top:12px">
