--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <a href="contact.html">Contact</a>
     <!-- <a class="cta" href="contact.html">Get a Quote</a> -->
   </nav>
-  <div class="social-links">
+  <div class="social-icons">
     <a href="https://instagram.com/SaptagiriColdStorage" target="_blank">
       <img src="images/instagramC.svg" alt="Instagram">
     </a>
@@ -55,9 +55,9 @@
     style="display:inline-flex;align-items:center"
   >
     <img
-      src="images/whatsapp.svg"
+      src="images/whatsappG.svg"
       alt="WhatsApp"
-      style="width:32px;height:32px"
+      
     >
   </a>    </a>
   </div>
